feat(condo): DOMA-8919 added custom roles (#4754)
* refactor(condo): DOMA-8919 removed unused error

refactor(condo): DOMA-8919 some refactored

fix(condo): DOMA-8919 fixed controlled tooltip

fix(condo): DOMA-8919 fixed tooltip

refactor(condo): DOMA-8919 refactored utils

fix(condo): DOMA-8919 fixed roles sorting

feat(condo): DOMA-8919 added limit for creating roles

feat(condo): DOMA-8919 updated translations for unknown roles

feat(condo): DOMA-8919 added translations for unknown roles

refactor(condo): DOMA-8919 removed unused import

refactor(condo): DOMA-8919 refactored employee role form

refactor(condo): DOMA-8919 refactored variable names

test(condo): DOMA-8919 added tests for ReplaceOrganizationEmployeeRoleService

chore(condo): DOMA-8919 removed logs

fix(condo): DOMA-8919 fixed imports

feat(condo): DOMA-8919 use deletedAt:null for OrganizationEmployeeRole schema

fix(condo): DOMA-8919 removed deletedAt from access filters

Revert "feat(condo): DOMA-8919 use deletedAt for OrganizationEmployeeRole"

This reverts commit 76ebf0d5eaafc5cc214a72dd85aa25c3844bf124.

feat(pass): DOMA-8919 use deletedAt for OrganizationEmployeeRole

feat(condo): DOMA-8919 use deletedAt for OrganizationEmployeeRole

feat(condo): DOMA-8919 updated B2BAppRole. You cannot use deleted roles

fix(callcenter): DOMA-8919 removed titles on setting pages

fix(condo): DOMA-8919 removed titles on setting pages

fix(condo): DOMA-8919 updated callcenter

fix(condo): DOMA-8919 removed feature flag for employee role

fix(condo): DOMA-8919 fixed navigation on setting page

fix(condo): DOMA-8919 fixed layout

feat(condo): DOMA-8919 fixed deleting of employee role

feat(condo): DOMA-8919 added custom roles in callcenter

chore(condo): DOMA-8919 updated schema

chore(condo): DOMA-8919 updated migration index

feat(condo): DOMA-8919 updated cc

feat(condo): DOMA-8919 added the ability to directly delete an employee role

fix(cond

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1098,9 +1098,9 @@
   "pages.condo.settings.employeeRoles.permission.canManageInvoices": "Manage invoices",
   "pages.condo.settings.employeeRoles.notification.updatePermissions": "Permissions updated",
   "pages.condo.settings.employeeRoles.notification.deletePermissions": "Permissions withdrawn",
-  "pages.condo.settings.employeeRoles.disabledCheckboxTitle": "You can not turn off the rights of all roles, for correct work of someone they must be available",
   "pages.condo.settings.employeeRoles.relatedCheckPermissionsTooltip": "Adding this permission automatically adds the following permissions: {permissions}.",
   "pages.condo.settings.employeeRoles.relatedUncheckPermissionsTooltip": "Deleting this permission will automatically remove the following permissions: {permissions}.",
+  "pages.condo.settings.employeeRoles.roleCreationLimitReachedTooltip": "Maximum number of roles reached: {max}",
   "pages.condo.settings.hint.organization": "Organization",
   "pages.condo.settings.hint.ticketPropertyHint": "Property hint",
   "pages.condo.settings.hint.createTicketPropertyHint": "Create ticket hint",
@@ -1248,6 +1248,32 @@
   "pages.condo.tls.guide.section.ios.title": "Certificates for IOS",
   "pages.condo.tls.epilog.title": "Install russian TLS certificates for access to Doma platform",
   "pages.condo.tls.epilog.description": "Large part of russian Internet services working with TLS certificates from Department of Digital Development of Russia (Mintsifry) — it is required because working of browsers with foreign TLS certificates is restricted  необходимо and foreign companies begin to refusing TLS certificates from russian websites. Without these TLS certificates your private data is not protected and attempting to access some website you will a warning. ресурса. Installation of TLS certificates guarantees safe access to all websites from all devices",
+  "pages.condo.employeeRole.create.title": "New role",
+  "pages.condo.employeeRole.update.title": "Edit role",
+  "pages.condo.employeeRole.update.error.notFoundRole": "Role not found",
+  "pages.condo.employeeRole.form.name.label": "Role name",
+  "pages.condo.employeeRole.form.name.placeholder": "For example, an accountant",
+  "pages.condo.employeeRole.form.description.label": "Role description",
+  "pages.condo.employeeRole.form.description.help.message": "You can add a description for the role, it will be displayed when you select the role when creating a new employee.",
+  "pages.condo.employeeRole.form.description.placeholder": "Add a description",
+  "pages.condo.employeeRole.form.ticketVisibility.title": "Ticket visibility area",
+  "pages.condo.employeeRole.form.ticketVisibility.description": "You can choose which tickets the user with the new role will see",
+  "pages.condo.employeeRole.form.ticketVisibility.type.organization": "All tickets",
+  "pages.condo.employeeRole.form.ticketVisibility.type.property": "For selected properties and assigned tickets",
+  "pages.condo.employeeRole.form.ticketVisibility.type.propertyAndSpecialization": "By selected properties, specializations and assigned tickets",
+  "pages.condo.employeeRole.form.ticketVisibility.type.assigned": "Assigned tickets",
+  "pages.condo.employeeRole.form.permissions.title": "Select permissions for the role",
+  "pages.condo.employeeRole.deleteRole.modal.title": "Delete role «{oldRole}»?",
+  "pages.condo.employeeRole.deleteRole.modal.description": "All users with «{oldRole}» rights will receive the rights of the role selected for replacement.",
+  "pages.condo.employeeRole.deleteRole.newRole.label": "Role",
+  "pages.condo.employeeRole.deleteRole.newRole.placeholder": "Select a role to replace",
+  "pages.condo.employeeRole.deleteRole.button.label": "Delete role",
+  "pages.condo.employeeRole.deleteRole.notification.success.message": "Role deleted",
+  "pages.condo.employeeRole.deleteRole.notification.success.description": "The role «{oldRole}» has been removed and changed to «{newRole}».",
+  "pages.condo.employeeRole.tooltip.notEditableRole": "You cannot change the role «{role}».",
+  "pages.condo.employeeRole.tooltip.defaultRole": "You cannot delete a base role",
+  "pages.condo.employeeRole.tooltip.myRoleToDelete": "You cannot delete a role that is assigned to you",
+  "pages.condo.employeeRole.tooltip.roleCreationLimitReached": "Maximum number of roles reached: {max}",
   "pages.organizations.CreateOrganizationButtonLabel": "Add organization",
   "pages.organizations.ChooseOrganizationLabel": "Chose organization",
   "pages.organizations.NoAvailableOrganizations": "No available organizations",
@@ -1618,6 +1644,7 @@
   "employee.role.Foreman.description": "The site master is responsible for the performance and quality of work on the site. The site master distributes tasks to performers and sets up routing.\nThe master is responsible for the performance and quality of certain works on the site. The wizard distributes tasks to performers and sets up routing.\nThe master works according to the chosen specializations and at the designated houses. \nYou can assign houses in the «Property scopes» in the «Settings».",
   "employee.role.Technician.name": "Technician",
   "employee.role.Technician.description": "The technician works with the tasks and performs the work. The technician does not have access to other sections and features of the system, except for applications.\nThe technician works according to the chosen specializations and at the assigned houses.\nYou can assign houses in the «Property scopes» in the «Settings».",
+  "employee.role.unknownRole": "Employee",
   "employee.isBlocked": "blocked",
   "DeletedEmployee": "Deleted employee",
   "meterReadingSource.Call.name": "Call",
@@ -2512,6 +2539,12 @@
   "api.user.completeConfirmPhoneAction.SMS_CODE_EXPIRED": "SMS code expired, try to verify phone number again",
   "api.user.completeConfirmPhoneAction.SMS_CODE_MAX_RETRIES_REACHED": "Max retries reached for SMS code confirmation. Try to initiate phone confirmation again",
   "api.user.completeConfirmPhoneAction.SMS_CODE_VERIFICATION_FAILED": "SMS code verification mismatch",
+  "api.organization.ReplaceOrganizationEmployeeRole.ORGANIZATION_NOT_FOUND": "Organization not found",
+  "api.organization.ReplaceOrganizationEmployeeRole.OLD_ROLE_NOT_FOUND": "Old role not found in your organization",
+  "api.organization.ReplaceOrganizationEmployeeRole.NEW_ROLE_NOT_FOUND": "New role not found in your organization",
+  "api.organization.ReplaceOrganizationEmployeeRole.DEFAULT_ROLE_CANNOT_BE_DELETED": "The default role cannot be deleted",
+  "api.organization.ReplaceOrganizationEmployeeRole.ROLES_MUST_BE_DIFFERENT": "The new and old roles cannot be the same",
+  "api.organization.ReplaceOrganizationEmployeeRole.ROLES_ARE_BEING_PROCESSED": "These roles are already being processed. Please try again a little later",
   "api.organization.inviteNewOrganizationEmployee.ALREADY_INVITED_EMAIL": "Employee with same email is already in the organization",
   "api.organization.inviteNewOrganizationEmployee.ALREADY_INVITED_PHONE": "Employee with same phone is already in the organization",
   "api.organization.inviteNewOrganizationEmployee.UNABLE_TO_REGISTER_USER": "Unable to register user",
@@ -2522,6 +2555,9 @@
   "api.organizationEmployee.NOT_FOUND_ROLE": "Role not found for your organization",
   "api.organizationEmployee.ALREADY_INVITED_EMAIL": "Employee with same email is already in the organization",
   "api.organizationEmployee.ALREADY_INVITED_PHONE": "Employee with same phone is already in the organization",
+  "api.organization.OrganizationEmployeeRole.ROLE_NAME_ALREADY_EXIST": "A role with the same name already exists",
+  "api.organization.OrganizationEmployeeRole.INVALID_ROLE_NAME_LENGTH": "The length of the role name can be from {min} to {max} characters",
+  "api.organization.OrganizationEmployeeRole.INVALID_ROLE_DESCRIPTION_LENGTH": "Role description length cannot be more than {max} characters",
   "api.common.INVALID_PHONE_NUMBER_FORMAT": "Invalid phone number format",
   "api.common.WRONG_PERCENT_VALUE": "Invalid percent value",
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Incorrect propertyId was provided. Please check that this id related to passed organizationId",
