--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1098,9 +1098,9 @@
   "pages.condo.settings.employeeRoles.permission.canManageInvoices": "Управление счетами",
   "pages.condo.settings.employeeRoles.notification.updatePermissions": "Права предоставлены",
   "pages.condo.settings.employeeRoles.notification.deletePermissions": "Права отозваны",
-  "pages.condo.settings.employeeRoles.disabledCheckboxTitle": "Нельзя выключить права у всех ролей, для корректной работы у кого-то они должны быть доступны",
   "pages.condo.settings.employeeRoles.relatedCheckPermissionsTooltip": "При добавлении этого права автоматически добавятся следующие права:  {permissions}.",
   "pages.condo.settings.employeeRoles.relatedUncheckPermissionsTooltip": "При удалении этого права автоматически удалятся следующие права: {permissions}.",
+  "pages.condo.settings.employeeRoles.roleCreationLimitReachedTooltip": "Достигнуто максимальное количество ролей: {max}",
   "pages.condo.settings.hint.organization": "УК",
   "pages.condo.settings.hint.ticketPropertyHint": "Справка по дому",
   "pages.condo.settings.hint.createTicketPropertyHint": "Создать справку",
@@ -1248,6 +1248,32 @@
   "pages.condo.tls.guide.section.ios.title": "Сертификаты для IOS",
   "pages.condo.tls.epilog.title": "Установите российские сертификаты для доступа к платформе Домá",
   "pages.condo.tls.epilog.description": "Большая часть российских сервисов работает с применением сертификатов НУЦ Минцифры РФ — это необходимо, поскольку работа многих браузеров с иностранными сертификатами ограничена. Также зарубежные компании начали отзывать сертификаты безопасности у российских сайтов. Без этих сертификатов ваши личные данные недостаточно защищены, поэтому при попытке зайти на сайт вы увидите предупреждение о небезопасности ресурса. Установка российских сертификатов гарантирует безопасный доступ ко всем сайтам с любых устройств.",
+  "pages.condo.employeeRole.create.title": "Новая роль",
+  "pages.condo.employeeRole.update.title": "Редактировать роль",
+  "pages.condo.employeeRole.update.error.notFoundRole": "Роль не найдена",
+  "pages.condo.employeeRole.form.name.label": "Название роли",
+  "pages.condo.employeeRole.form.name.placeholder": "Например, бухгалтер",
+  "pages.condo.employeeRole.form.description.label": "Описание роли",
+  "pages.condo.employeeRole.form.description.help.message": "Вы можете добавить описание для роли, оно будет отображаться при выборе роли во время создания нового сотрудника.",
+  "pages.condo.employeeRole.form.description.placeholder": "Добавьте описание",
+  "pages.condo.employeeRole.form.ticketVisibility.title": "Область видимости заявок",
+  "pages.condo.employeeRole.form.ticketVisibility.description": "Вы можете выбрать, какие именно заявки будет видеть пользователь с новой ролью",
+  "pages.condo.employeeRole.form.ticketVisibility.type.organization": "Все заявки",
+  "pages.condo.employeeRole.form.ticketVisibility.type.property": "По выбранным домам и назначенным заявкам",
+  "pages.condo.employeeRole.form.ticketVisibility.type.propertyAndSpecialization": "По выбранным домам, специализациям и назначенным заявкам",
+  "pages.condo.employeeRole.form.ticketVisibility.type.assigned": "Назначенные заявки",
+  "pages.condo.employeeRole.form.permissions.title": "Выберите права для роли",
+  "pages.condo.employeeRole.deleteRole.modal.title": "Удалить роль «{oldRole}»?",
+  "pages.condo.employeeRole.deleteRole.modal.description": "Все пользователи с правами «{oldRole}» получат права выбранной на замену роли.",
+  "pages.condo.employeeRole.deleteRole.newRole.label": "Роль",
+  "pages.condo.employeeRole.deleteRole.newRole.placeholder": "Выберите роль для замены",
+  "pages.condo.employeeRole.deleteRole.button.label": "Удалить роль",
+  "pages.condo.employeeRole.deleteRole.notification.success.message": "Роль удалена",
+  "pages.condo.employeeRole.deleteRole.notification.success.description": "Роль «{oldRole}» удалена и изменена на «{newRole}».",
+  "pages.condo.employeeRole.tooltip.notEditableRole": "Вы не можете изменить роль «{role}».",
+  "pages.condo.employeeRole.tooltip.defaultRole": "Вы не можете удалить базовую роль.",
+  "pages.condo.employeeRole.tooltip.myRoleToDelete": "Вы не можете удалить роль, которая вам назначена",
+  "pages.condo.employeeRole.tooltip.roleCreationLimitReached": "Достигнуто максимальное количество ролей: {max}",
   "pages.organizations.CreateOrganizationButtonLabel": "Добавить организацию",
   "pages.organizations.ChooseOrganizationLabel": "Выберите организацию",
   "pages.organizations.NoAvailableOrganizations": "Нет доступных организаций",
@@ -1618,6 +1644,7 @@
   "employee.role.Foreman.description": "Мастер отвечает за выполнение и качество работ на участке. Он распределяет задачи по исполнителям, настраивает маршрутизацию и работает по выбранным специализациям на назначенных домах.  Ограничить доступ можно в «Настройках», в разделе «Области видимости».",
   "employee.role.Technician.name": "Техник",
   "employee.role.Technician.description": "Техник работает с задачами и выполняет работы по выбранным специализациям в назначенных домах. Кроме заявок, у него нет доступа к другим разделам и возможностям системы. Назначить дома можно в «Настройках», в разделе «Области видимости».",
+  "employee.role.unknownRole": "Сотрудник",
   "employee.isBlocked": "заблокирован",
   "DeletedEmployee": "Удаленный сотрудник",
   "meterReadingSource.Call.name": "Звонок",
@@ -2512,6 +2539,12 @@
   "api.user.completeConfirmPhoneAction.SMS_CODE_EXPIRED": "Просрочен код подтверждения телефона по СМС, попробуйте пройти подтверждение номера телефона заново",
   "api.user.completeConfirmPhoneAction.SMS_CODE_MAX_RETRIES_REACHED": "Превышено количество попыток подтверждения номера телефона по СМС. Попробуйте заново пройти подтверждение номера телефона",
   "api.user.completeConfirmPhoneAction.SMS_CODE_VERIFICATION_FAILED": "Неверный код подтверждения телефона",
+  "api.organization.ReplaceOrganizationEmployeeRole.ORGANIZATION_NOT_FOUND": "Организация не найдена",
+  "api.organization.ReplaceOrganizationEmployeeRole.OLD_ROLE_NOT_FOUND": "Старая роль не найдена в организации",
+  "api.organization.ReplaceOrganizationEmployeeRole.NEW_ROLE_NOT_FOUND": "Новая роль не найдена в организации",
+  "api.organization.ReplaceOrganizationEmployeeRole.DEFAULT_ROLE_CANNOT_BE_DELETED": "Базовую роль нельзя удалить",
+  "api.organization.ReplaceOrganizationEmployeeRole.ROLES_MUST_BE_DIFFERENT": "Новая и старая роль не могут совпадать",
+  "api.organization.ReplaceOrganizationEmployeeRole.ROLES_ARE_BEING_PROCESSED": "Эти роли уже обрабатываются. Пожалуйста, повторите попытку чуть позже",
   "api.organization.inviteNewOrganizationEmployee.ALREADY_INVITED_EMAIL": "Сотрудник с таким Email уже есть в организации",
   "api.organization.inviteNewOrganizationEmployee.ALREADY_INVITED_PHONE": "Сотрудник с таким номером телефона уже есть в организации",
   "api.organization.inviteNewOrganizationEmployee.UNABLE_TO_REGISTER_USER": "Ошибка во время регистрации пользователя",
@@ -2522,6 +2555,9 @@
   "api.organizationEmployee.NOT_FOUND_ROLE": "Роль не найдена в вашей организаии",
   "api.organizationEmployee.ALREADY_INVITED_EMAIL": "Сотрудник с таким Email уже есть в организации",
   "api.organizationEmployee.ALREADY_INVITED_PHONE": "Сотрудник с таким номером телефона уже есть в организации",
+  "api.organization.OrganizationEmployeeRole.ROLE_NAME_ALREADY_EXIST": "Роль с таким названием уже существует",
+  "api.organization.OrganizationEmployeeRole.INVALID_ROLE_NAME_LENGTH": "Длина название роли может быть от {min} до {max} символов",
+  "api.organization.OrganizationEmployeeRole.INVALID_ROLE_DESCRIPTION_LENGTH": "Длина название роли не может быть больше {max} символов",
   "api.common.INVALID_PHONE_NUMBER_FORMAT": "Некорректный формат номера телефона",
   "api.common.WRONG_PERCENT_VALUE": "Некорректное значение процента",
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Неверное значение propertyId. Данный дом не принадлежит выбранной организации",
