fix(condo): DOMA-9118 fixed custom roles after design-review (#4773)
* fix(condo): DOMA-9118 fixed layouts on page of role creating

* fix(condo): DOMA-9118 fixed translations

* fix(condo): DOMA-9118 fixed expandable rows on page of employee roles

* fix(condo): DOMA-9118 Added adaptability of the table with roles

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1270,7 +1270,7 @@
   "pages.condo.employeeRole.deleteRole.button.label": "Delete role",
   "pages.condo.employeeRole.deleteRole.notification.success.message": "Role deleted",
   "pages.condo.employeeRole.deleteRole.notification.success.description": "The role «{oldRole}» has been removed and changed to «{newRole}».",
-  "pages.condo.employeeRole.tooltip.notEditableRole": "You cannot change the role «{role}».",
+  "pages.condo.employeeRole.tooltip.notEditableRole": "You cannot change the permissions of a role «{role}».",
   "pages.condo.employeeRole.tooltip.defaultRole": "You cannot delete a base role",
   "pages.condo.employeeRole.tooltip.myRoleToDelete": "You cannot delete a role that is assigned to you",
   "pages.condo.employeeRole.tooltip.roleCreationLimitReached": "Maximum number of roles reached: {max}",
