refactor(condo): DOMA-7753 added types of keys for translations (#4656)
* chore(condo): DOMA-7753 added todo

docs(condo): DOMA-7753 added docs for @open-condo/next

refactor(condo): DOMA-7753 refactored after review

fix(condo): DOMA-7753 returned package state

chore(condo): DOMA-7753 updated "callcenter" submodule

fix(condo): DOMA-7753 fixed types

fix(next): DOMA-7753 fixed types

refactor(registry): DOMA-7753 updated "registry" submodule

refactor(condo): DOMA-7753 removed ts-ignore

chore(condo): DOMA-7753 updated "telephony" submodule

chore(condo): DOMA-7753 updated "registry" submodule

chore(condo): DOMA-7753 updated "property-importer" submodule

chore(condo): DOMA-7753 updated "pass" submodule

chore(condo): DOMA-7753 updated "insurance" submodule

chore(condo): DOMA-7753 updated "eps" submodule

chore(condo): DOMA-7753 updated "condorb" submodule

chore(miniapp): DOMA-7753 added types for translations

Revert "chore(condo): DOMA-7753 test error"

This reverts commit c6e9e6e5ec2beccd210ca5884cbd5ea9b7204d80.

chore(condo): DOMA-7753 test error

test(condo): DOMA-7753 fixed tests

test(condo): DOMA-7753 configured jest for *.spec.ts

refactor(pass): DOMA-7753 updated "callcenter" submodule

fix(callcenter): DOMA-7753 added missing translations

test(condo): DOMA-7753 run tests "*.spec.ts"

chore(pass): DOMA-7753 removed todos

refactor(pass): DOMA-7753 updated "callcenter" submodule after rebasing

refactor(pass): DOMA-7753 refactored "registry" submodule

refactor(pass): DOMA-7753 refactored "pass" submodule

refactor(pass): DOMA-7753 updated translation types

chore(condo): DOMA-7753 update "callcenter" submodule

refactor(condo): DOMA-7753 fixed errors after migration "next" package to typescript

refactor(address-service): DOMA-7753 fixed errors after migration "next" package to typescript

test(condo): DOMA-7753 fixed errors after migration "next" package to typescript

test(condo):

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -153,6 +153,7 @@
   "field.Assignee.requiredError": "Set Responsible",
   "field.Category": "Category",
   "field.Classifier.requiredError": "Select problem classifier",
+  "field.Assignee.organizationError": "Please select an organization",
   "field.ClientName.minLengthError": "Enter your full name",
   "field.Description.lengthError": "Please describe the problem in more detail",
   "field.EMail": "E-mail",
@@ -1792,6 +1793,7 @@
   "news.component.RecipientCounter.toResidentsInPropertySections.andMore": " and more {count} sections",
   "news.component.RecipientCounter.toResidentsInPropertyUnits": " to units {unitNames}{andMore} at {address}",
   "news.component.RecipientCounter.toResidentsInPropertyUnits.andMore": " and more {count} units",
+  "news.component.RecipientCounter.error.loading": "Failed to load recipient count",
   "notification.messages.MESSAGE_FORWARDED_TO_SUPPORT.email.subject": "Message from mobile application",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.email.subject": "You are invited to join organization as employee",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.push.title": "You are invited to join organization as employee",
