--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -153,6 +153,7 @@
   "field.Assignee.requiredError": "Укажите Ответственного",
   "field.Category": "Категория",
   "field.Classifier.requiredError": "Выберите классификатор проблемы",
+  "field.Assignee.organizationError": "Пожалуйста, укажите организацию",
   "field.ClientName.minLengthError": "Укажите ФИО",
   "field.Description.lengthError": "Пожалуйста, опишите проблему подробнее",
   "field.EMail": "E-mail",
@@ -1792,6 +1793,7 @@
   "news.component.RecipientCounter.toResidentsInPropertySections.andMore": " и ещё {count, plural, one {# подъезд} few {# подъезда} other {# подъездов}}",
   "news.component.RecipientCounter.toResidentsInPropertyUnits": " по помещениям {unitNames}{andMore} по адресу {address}",
   "news.component.RecipientCounter.toResidentsInPropertyUnits.andMore": " и ещё {count, plural, one {# помещение} few {# помещения} other {# помещений}}",
+  "news.component.RecipientCounter.error.loading": "Не удалось загрузить количество получателей",
   "notification.messages.MESSAGE_FORWARDED_TO_SUPPORT.email.subject": "Обращение из мобильного приложения",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.email.subject": "Вас пригласили присоединиться к организации в качестве сотрудника",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.push.title": "Вас пригласили присоединиться к организации в качестве сотрудника",
