fix(condo): DOMA-9181 fix image and text of card on guide page (#4797)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2198,9 +2198,9 @@
   "tour.guide.aboutApp.quality.modal.picText": "The Resident App improves service quality",
   "tour.guide.aboutApp.quality.modal.body": "Quick responses to requests make communication more transparent and increase residents' loyalty. The app allows receiving news about important events in the life of the building and notifies about the progress of requests. The ability to evaluate requests, comment on them, and communicate with the management company in the chat helps control the quality of services.",
   "tour.guide.aboutApp.quality.modal.card.body": "'Zeleny Bulvar' management company taught most residents to communicate through the app, and they inform about events through notifications and push notifications — information about the event appears in the Doma mobile app and on the resident's smartphone screen.",
-  "tour.guide.aboutApp.communication.card.body": "Makes communication transparent",
-  "tour.guide.aboutApp.communication.modal.picText": "The Resident App brings additional revenue from paid services",
-  "tour.guide.aboutApp.communication.modal.body": "The management company can offer residents additional services through the app. This brings in revenue, and thanks to process automation, costs for processing paid requests are reduced. Quality service, verified craftsmen, convenient registration, and payment for services increase residents' loyalty.",
+  "tour.guide.aboutApp.extraIncome.card.body": "Brings additional income from paid services",
+  "tour.guide.aboutApp.extraIncome.modal.picText": "The Resident App brings additional revenue from paid services",
+  "tour.guide.aboutApp.extraIncome.modal.body": "The management company can offer residents additional services through the app. This brings in revenue, and thanks to process automation, costs for processing paid requests are reduced. Quality service, verified craftsmen, convenient registration, and payment for services increase residents' loyalty.",
   "tour.guide.introduceApp.title": "How to Implement the Mobile App",
   "tour.guide.introduceApp.step": "Step",
   "tour.guide.introduceApp.step.announcement.title": "Post an Announcement on the Notice Board in the Entrances",
