--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2198,9 +2198,9 @@
   "tour.guide.aboutApp.quality.modal.picText": "Приложение для Жителя улучшает качество обслуживания",
   "tour.guide.aboutApp.quality.modal.body": "Оперативная реакция на запросы делает коммуникацию прозрачнее и повышает лояльность жителей. Приложение позволяет получать новости о важных событиях в жизни дома и оповещает о ходе выполнения заявок. Возможность оценивать заявки, комментировать их и общаться с УК в чате помогает контролировать качество услуг.",
   "tour.guide.aboutApp.quality.modal.card.body": "УК «Зеленый бульвар» научили большинство жителей общаться через приложение, а о событиях рассказывают через оповещения и push-уведомления — сведения о событии появляется в мобильном приложении Doma и на экране смартфона жителя.",
-  "tour.guide.aboutApp.communication.card.body": "Делает коммуникацию прозрачнее",
-  "tour.guide.aboutApp.communication.modal.picText": "Приложение для Жителя приносит дополнительный доход от платных услуг",
-  "tour.guide.aboutApp.communication.modal.body": "Управляющая компания может предлагать жителям дополнительные услуги через приложение. Это приносит доход, а за счет автоматизации процессов затраты на обработку платных заявок снижаются. Качественный сервис, проверенные мастера, удобное оформление и оплата услуги повышает лояльность жителей.",
+  "tour.guide.aboutApp.extraIncome.card.body": "Приносит дополнительный доход от платных услуг",
+  "tour.guide.aboutApp.extraIncome.modal.picText": "Приложение для Жителя приносит дополнительный доход от платных услуг",
+  "tour.guide.aboutApp.extraIncome.modal.body": "Управляющая компания может предлагать жителям дополнительные услуги через приложение. Это приносит доход, а за счет автоматизации процессов затраты на обработку платных заявок снижаются. Качественный сервис, проверенные мастера, удобное оформление и оплата услуги повышает лояльность жителей.",
   "tour.guide.introduceApp.title": "Как внедрить мобильное приложение",
   "tour.guide.introduceApp.step": "Шаг",
   "tour.guide.introduceApp.step.announcement.title": "Разместите объявление на инфостенде в подъездах",
