feat(condo): DOMA-9047 add localization for water removal category (#4786)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1362,9 +1362,9 @@
   "pages.condo.news.index.emptyList.title": "Shall we add the first news right now?",
   "pages.condo.news.resend": "Resend",
   "pages.condo.news.validBefore": "until {validBefore}",
-  "pages.condo.news.notification.success.title" : "News sent",
-  "pages.condo.news.notification.success.description" : "Sending can be cancelled within 15 seconds",
-  "pages.condo.news.notification.success.button" : "Cancel send",
+  "pages.condo.news.notification.success.title": "News sent",
+  "pages.condo.news.notification.success.description": "Sending can be cancelled within 15 seconds",
+  "pages.condo.news.notification.success.button": "Cancel send",
   "pages.reports.paymentTooltip": "To display statistics, you must use one of the following billing integrations: ГИС-ЖКХ or Квартплата24",
   "pages.reports.paymentsTotal": "Payment of receipts (from resident mobile app)",
   "pages.reports.residentsTitle": "implementation of the mobile app",
@@ -1586,8 +1586,8 @@
   "news.fields.title.placeholder": "Form title of news. Don't start with a greeting, but get right to the point: tell what happened in a short sentence",
   "news.fields.body.label": "Message text",
   "news.fields.body.placeholder": "Form message text of the news - it will appear on the main screen of the resident's app, in the «News» section and as a push notification",
-  "news.fields.properties.allSelected":"All houses",
-  "news.fields.validBefore.title":"The message will be pinned to the home screen of the app until the specified time or until the resident reads it. After that, it stays in the newsfeed and notification section",
+  "news.fields.properties.allSelected": "All houses",
+  "news.fields.validBefore.title": "The message will be pinned to the home screen of the app until the specified time or until the resident reads it. After that, it stays in the newsfeed and notification section",
   "news.fields.sendAt.label": "Send at",
   "news.fields.title.error.length": "Please add title",
   "news.fields.body.error.length": "Please add message",
@@ -1658,7 +1658,7 @@
   "meterReadingSource.Visit.name": "Office visit",
   "meterReadingSource.WebApp.name": "Web application",
   "meterReadingSource.OrganizationSite.name": "Organization site",
-  "meterReadingSource.Messenger.name":"Messengers (tg, whatsapp, viber, ..)",
+  "meterReadingSource.Messenger.name": "Messengers (tg, whatsapp, viber, ..)",
   "meterReadingSource.SocialNetwork.name": "Social media (vk, fb, ..)",
   "meterReadingSource.MobileAppStaff.name": "Staff mobile app",
   "meterReadingSource.crm.name": "CRM",
@@ -2818,6 +2818,7 @@
   "billing.category.telecom.name": "Telecom",
   "billing.category.heating.name": "Heating",
   "billing.category.membership_fee.name": "Membership fee",
+  "billing.category.water_removal.name": "Water removal",
   "billing.category.housing.name.declined": "rent",
   "billing.category.repair.name.declined": "capital repairs",
   "billing.category.electricity.name.declined": "electricity",
@@ -2989,7 +2990,7 @@
   "api.marketplace.MarketItemPrice.error.INVALID_PRICE": "The price cannot be less than 0. Check line {rowNumber}.",
   "api.marketplace.MarketItemPrice.error.EMPTY_PRICE": "Price cannot be empty.",
   "api.marketplace.MarketItemPrice.error.ORGANIZATION_IN_PROPERTY_AND_MARKET_ITEM_PRICE_NOT_MATCHED": "Cannot create scope with property from one organization and market item from another organization.",
-  "api.marketplace.registerInvoice.error.noAcquiringContext":"The organization hasn't set up the marketplace",
+  "api.marketplace.registerInvoice.error.noAcquiringContext": "The organization hasn't set up the marketplace",
   "api.marketplace.registerInvoice.error.itemFromOtherOrganization": "Item from other organization. Check line {rowNumber}",
   "marketplace.invoice.newTicket.details": "The paid service ordered",
   "api.marketplace.invoice.error.NoFinishedAcquiringContext": "The organization has not finished the configuration of the marketplace",
