--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1362,9 +1362,9 @@
   "pages.condo.news.index.emptyList.title": "Добавим первую новость прямо сейчас?",
   "pages.condo.news.resend": "Повторить отправку",
   "pages.condo.news.validBefore": "до {validBefore}",
-  "pages.condo.news.notification.success.title" : "Новость отправлена",
-  "pages.condo.news.notification.success.description" : "Отправку можно отменить в течение 15 секунд",
-  "pages.condo.news.notification.success.button" : "Отменить отправку",
+  "pages.condo.news.notification.success.title": "Новость отправлена",
+  "pages.condo.news.notification.success.description": "Отправку можно отменить в течение 15 секунд",
+  "pages.condo.news.notification.success.button": "Отменить отправку",
   "pages.reports.paymentTooltip": "Для отображения статистики необходимо использовать одну из следующих биллинговых интеграций: ГИС-ЖКХ или Квартплата24",
   "pages.reports.paymentsTotal": "Оплата квитанций (из МП жителя)",
   "pages.reports.residentsTitle": "Внедрение моб. приложения жителя",
@@ -2818,6 +2818,7 @@
   "billing.category.telecom.name": "Антенна",
   "billing.category.heating.name": "Отопление",
   "billing.category.membership_fee.name": "Взносы",
+  "billing.category.water_removal.name": "Водоотведение",
   "billing.category.housing.name.declined": "квартплату",
   "billing.category.repair.name.declined": "капремонт",
   "billing.category.electricity.name.declined": "электричество",
@@ -2989,7 +2990,7 @@
   "api.marketplace.MarketItemPrice.error.INVALID_PRICE": "Цена не может быть меньше 0. Проверьте строку {rowNumber}.",
   "api.marketplace.MarketItemPrice.error.EMPTY_PRICE": "Цена не может быть пустой.",
   "api.marketplace.MarketItemPrice.error.ORGANIZATION_IN_PROPERTY_AND_MARKET_ITEM_PRICE_NOT_MATCHED": "Невозможно создать область видимости списка услуг с домом из одной организации и услугой из другой организации.",
-  "api.marketplace.registerInvoice.error.noAcquiringContext":"Не выполнена настройка со стороны организации",
+  "api.marketplace.registerInvoice.error.noAcquiringContext": "Не выполнена настройка со стороны организации",
   "api.marketplace.registerInvoice.error.itemFromOtherOrganization": "Позиция из другой организации. Проверьте строку {rowNumber}",
   "marketplace.invoice.newTicket.details": "Заказана платная услуга",
   "api.marketplace.invoice.error.NoFinishedAcquiringContext": "Организация не завершила настройку маркетплейса",
