chore(condo): DOMA-9194 improve meters errors (#4805)
* chore(condo): DOMA-9194 improve meters errors

* chore(condo): DOMA-9194 fix RegisterMetersReadingsService.test.js

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2503,6 +2503,8 @@
   "api.meter.METER_NUMBER_HAVE_INVALID_VALUE": "Номер счетчика не может быть пустым",
   "api.meter.METER_ACCOUNT_NUMBER_HAVE_INVALID_VALUE": "Лицевой счет не может быть пустым",
   "api.meter.METER_RESOURCE_OWNED_BY_ANOTHER_ORGANIZATION": "Данным ресурсом по текущему адресу владеет другая УК. Пожалуйста, обратитесь в поддержку для решения этого вопроса",
+  "api.meter.SAME_NUMBER_AND_RESOURCE_EXISTS_IN_ORGANIZATION": "ИПУ с таким номером и ресурсом уже есть в организации на лицевом счете {accountNumbersCsv}",
+  "api.meter.SAME_ACCOUNT_NUMBER_EXISTS_IN_OTHER_UNIT": "ИПУ с таким лицевым счетом уже есть в организации в помещении {unitsCsv}",
   "api.meter.MeterReportingPeriod.INVALID_FINISH": "Конец периода может принимать значение только от 1 до 31",
   "api.meter.MeterReportingPeriod.INVALID_START": "Начало периода может принимать значение только от 1 до 31",
   "api.meter.MeterReportingPeriod.ORGANIZATION_IS_REQUIRED": "Необходима организация для создания периода сдачи показаний",
