fix(condo): DOMA-9217 Removed "Doma" from push notification texts (#4836)

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1817,17 +1817,17 @@
   "notification.messages.TICKET_EXECUTOR_CONNECTED.email.subject": "Вы назначены исполнителем(-ницей) по заявке №{data.ticketNumber}",
   "notification.messages.TICKET_EXECUTOR_CONNECTED.push.title": "Новая заявка",
   "notification.messages.TICKET_STATUS_OPENED.email.subject": "Привет, это Doma! \uD83E\uDD96",
-  "notification.messages.TICKET_STATUS_OPENED.push.title": "Привет, это Doma! \uD83E\uDD96",
+  "notification.messages.TICKET_STATUS_OPENED.push.title": "Новая заявка \uD83D\uDCA1",
   "notification.messages.TICKET_STATUS_IN_PROGRESS.email.subject": "У нас новости по заявке №{data.ticketNumber}! \uD83E\uDD96",
   "notification.messages.TICKET_STATUS_IN_PROGRESS.push.title": "У нас новости по заявке №{data.ticketNumber}! \uD83E\uDD96",
   "notification.messages.TICKET_STATUS_COMPLETED.email.subject": "Привет, это Doma! \uD83E\uDD96",
-  "notification.messages.TICKET_STATUS_COMPLETED.push.title": "Привет, это Doma! \uD83E\uDD96",
+  "notification.messages.TICKET_STATUS_COMPLETED.push.title": "Новая заявка \uD83D\uDCA1",
   "notification.messages.TICKET_STATUS_RETURNED.email.subject": "Привет, это Doma! \uD83E\uDD96",
-  "notification.messages.TICKET_STATUS_RETURNED.push.title": "Привет, это Doma! \uD83E\uDD96",
+  "notification.messages.TICKET_STATUS_RETURNED.push.title": "Заявка открыта\uD83D\uDCA1",
   "notification.messages.TICKET_STATUS_DECLINED.email.subject": "Привет, это Doma! \uD83E\uDD96",
-  "notification.messages.TICKET_STATUS_DECLINED.push.title": "Привет, это Doma! \uD83E\uDD96",
+  "notification.messages.TICKET_STATUS_DECLINED.push.title": "Заявка отменена \uD83D\uDCA1",
   "notification.messages.TICKET_COMMENT_ADDED.email.subject": "Новости по заявке №{data.ticketNumber}! \uD83E\uDD96",
-  "notification.messages.TICKET_COMMENT_ADDED.push.title": "Новости по заявке №{data.ticketNumber}! \uD83E\uDD96",
+  "notification.messages.TICKET_COMMENT_ADDED.push.title": "Новости по заявке №{data.ticketNumber}! \uD83D\uDCA1",
   "notification.messages.BILLING_RECEIPT_AVAILABLE.email.subject": "Вам квитанция!",
   "notification.messages.BILLING_RECEIPT_AVAILABLE.push.title": "Вам квитанция!",
   "notification.messages.BILLING_RECEIPT_AVAILABLE_NO_ACCOUNT.email.subject": "Вам квитанция!",
