--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1817,15 +1817,15 @@
   "notification.messages.TICKET_EXECUTOR_CONNECTED.email.subject": "You were assigned as executor of ticket #{data.ticketNumber}",
   "notification.messages.TICKET_EXECUTOR_CONNECTED.push.title": "New ticket",
   "notification.messages.TICKET_STATUS_OPENED.email.subject": "Hi, it's Doma! \uD83E\uDD96",
-  "notification.messages.TICKET_STATUS_OPENED.push.title": "Hi, it's Doma! \uD83E\uDD96",
+  "notification.messages.TICKET_STATUS_OPENED.push.title": "New ticket \uD83D\uDCA1",
   "notification.messages.TICKET_STATUS_IN_PROGRESS.email.subject": "We have news on ticket #{data.ticketNumber}! \uD83E\uDD96",
   "notification.messages.TICKET_STATUS_IN_PROGRESS.push.title": "We have news on ticket #{data.ticketNumber}! \uD83E\uDD96",
   "notification.messages.TICKET_STATUS_COMPLETED.email.subject": "Hi, it's Doma! \uD83E\uDD96",
-  "notification.messages.TICKET_STATUS_COMPLETED.push.title": "Hi, it's Doma! \uD83E\uDD96",
+  "notification.messages.TICKET_STATUS_COMPLETED.push.title": "New ticket \uD83D\uDCA1",
   "notification.messages.TICKET_STATUS_RETURNED.email.subject": "Hi, it's Doma! \uD83E\uDD96",
-  "notification.messages.TICKET_STATUS_RETURNED.push.title": "Hi, it's Doma! \uD83E\uDD96",
+  "notification.messages.TICKET_STATUS_RETURNED.push.title": "Ticket is open \uD83D\uDCA1",
   "notification.messages.TICKET_STATUS_DECLINED.email.subject": "Hi, it's Doma! \uD83E\uDD96",
-  "notification.messages.TICKET_STATUS_DECLINED.push.title": "Hi, it's Doma! \uD83E\uDD96",
+  "notification.messages.TICKET_STATUS_DECLINED.push.title": "Ticket canceled \uD83D\uDCA1",
   "notification.messages.TICKET_COMMENT_ADDED.email.subject": "We have news on ticket #{data.ticketNumber}! \uD83E\uDD96",
   "notification.messages.TICKET_COMMENT_ADDED.push.title": "We have news on ticket #{data.ticketNumber}! \uD83E\uDD96",
   "notification.messages.BILLING_RECEIPT_AVAILABLE.email.subject": "Check out your utility bill",
